# zk-fhe

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
configs/: bfv.json
data/: bfv.in  bfv_2.in  bfv_3.in  poly_input.in
data/bfv/: bfv.in  bfv_empty.in
data/bfv_test/: bfv.in  bfv_empty.in
examples/: bfv.rs  bfv_big_int.rs
src/: lib.rs  poly.rs  poly_chip.rs  poly_utils.rs
src/chips/: distribution.rs  mod.rs  poly_assigned.rs  poly_big_int_chip.rs  poly_distribution.rs  poly_operations.rs  utils.rs
